--- a/transport-native-epoll/pom.xml
+++ b/transport-native-epoll/pom.xml
@@ -322,6 +322,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.perfmark</groupId>
+      <artifactId>perfmark-api</artifactId>
+      <version>0.16.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport-native-unix-common</artifactId>
       <version>${project.version}</version>
